# wav-to-mp3

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: a8d707e41632_init.py
app/: database.py  main.py  routers.py  settings.py
app/records/: models.py  routers.py  schemas.py  service.py  utils.py
app/users/: models.py  routers.py  schemas.py  service.py  utils.py
tests/: conftest.py
tests/records/: test_utils.py
tests/users/: test_service.py
