[tool.poetry]
name = "wav-to-mp3"
version = "0.1.0"
description = "Service for converting wav to mp3"
authors = ["emp7yhead <artyomkropp@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
alembic = "^1.11.1"
SQLAlchemy = "^2.0.15"
pydub = "^0.25.1"
uvicorn = "^0.22.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
flake8-isort = "^6.0.0"
flake8-bandit = "^4.1.1"
mypy = "^1.3.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = "__pycache__"
addopts = "--strict-markers"

[tool.flake8]
accept-encodings = "utf-8"
max-complexity = 6
statistics = false
max-line-length = 80
doctests = true
enable-extensions = "G"
isort-show-traceback = true
exclude = ['/alembic', '/tests']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
default_section = "THIRDPARTY"
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
follow_imports = "skip"
